# fun_weather_backend

./: README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 0ed632706a54_created_subscriber_model_and_then_.py
src/: database.py  dependencies.py  main.py  model.py  models.py
src/registeration_api/: main.py
src/registration_api/: Dockerfile  main.py  schemas.py
src/shared/: database.py  dependencies.py
src/sms_service/: celery_app.py  tasks.py  third_party.py
