[project]
name = "funweather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # shared by both api and worker
    "alembic>=1.18.4",
    "psycopg2>=2.9.12",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "phonenumbers>=9.0.29",
]

[project.optional-dependencies]
registration_api = [
    "fastapi[standard]>=0.136.1",
]
sms_service = [
    "celery[redis]>=5.6.3",
    "vonage>=4.8.0",
]