[project]
name = "funweather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.136.1",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "vonage>=4.8.0",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "phonenumbers>=9.0.29",
]